[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/joystix monospace.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/dialogHandling/dialogueBox.gd" type="Script" id=2]
[ext_resource path="res://scripts/dialogHandling/dialogPlayer.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=5]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/Text:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "spellOutByLetter"
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/PlayerInput:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="Control" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -232.0
margin_top = -225.0
margin_right = -104.0
margin_bottom = -97.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -97.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -104.0
margin_top = -117.0
margin_bottom = -97.0
custom_fonts/font = SubResource( 1 )
text = "[E] Skip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="Panel"]
margin_top = -18.0
margin_right = 274.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Panel/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
custom_fonts/font = SubResource( 2 )
text = "Betty \"Booty Guns\" Gonzalez"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Panel"]
margin_right = 1024.0
margin_bottom = 74.0
size_flags_horizontal = 0
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
text = "This is the alignment for the dialog"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerInput" type="Label" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -23.0
margin_bottom = -3.0
custom_fonts/font = SubResource( 4 )
text = "[a] continue [d] exit"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogPlayer" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/spellOutLetterByLetter = SubResource( 5 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/spellOutByLetter = SubResource( 6 )
